# financeiro

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: container-image.yml
nginx/: default.conf
src/: manage.py
src/cartao/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
src/cartao/migrations/: 0001_initial.py  0002_gasto_cost_center_observacao.py
src/cartao/tests/: test_import.py  test_models.py  test_views.py
src/core/: admin.py  apps.py  models.py  tests.py
src/core/migrations/: 0001_initial.py
src/entries/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/entries/bot/: handlers.py
src/entries/fixtures/: sample_entries.json
src/entries/management/commands/: run_telegram_bot.py
src/entries/migrations/: 0001_initial.py  0002_entry_forma_pagamento.py  0003_costcenter_entry_cost_center.py  0004_category_entry_category_fk.py  0005_move_category_to_core.py  0006_entry_attachments.py
src/financeiro_project/: asgi.py  forms.py  settings.py  tests.py  urls.py  views.py  wsgi.py
src/static/css/: app.css
src/tarefas/: api.py  apps.py  models.py  schemas.py  urls.py  views.py
src/tarefas/migrations/: 0001_initial.py
src/templates/: base.html  dashboard.html
src/templates/cartao/: cartao_list.html  fatura_list.html  gasto_list.html
src/templates/entries/: entry_list.html
src/templates/partials/: messages.html
src/templates/registration/: login.html
src/templates/tarefas/: tarefas_board.html
(+11 files in other folders)
