[project]
name = "financeiro"
version = "0.1.0"
description = "Aplicação Django para gestão de contas a pagar e receber."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "dj-database-url>=3.0.1",
    "google-genai>=1.62.0",
    "psycopg-binary>=3.2.11",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.7",
    "python-telegram-bot>=22.5",
    "python-dotenv>=1.1.1",
    "whitenoise>=6.11.0",
    "django-ninja>=1.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"src/**/migrations/*.py" = ["I001"]

[tool.hatch.build.targets.wheel]
packages = [
    "src/core",
    "src/financeiro_project",
    "src/entries",
    "src/cartao",
]
